# pyaccel

./: .gitignore  README.md  accel-v-mkl.ipynb  install_editable.sh  meson.build  pyproject.toml  setup.py  test.py
.github/workflows/: test-with-mamba.yml
pyaccel/: accel_solver.pyx  meson.build  setup.py
tests/: test_pyaccel.py
